# node

./: .dockerignore  .gitignore  Dockerfile.client  Dockerfile.node  Makefile  README.md  WebSocketServer.java  docker-compose.yml  go.mod  index.html  main.js  pyproject.toml  requirements.txt  setup.py
.github/agents/: developer-agent.agent.md
.github/workflows/: README.md  ci.yml
cmd/client/: README.md  main.go
cmd/node/: README.md  main.go
deploy/: README.md
deployment/: .env.example  README.md  docker-compose.dev.yml  docker-compose.prod.yml
deployment/configs/: node1.env  node2.env  node3.env
deployment/demo/: .gitignore  QUICKSTART.md  README.md  Vagrantfile
deployment/docs/: DEPLOYMENT.md  OPERATIONS.md  TROUBLESHOOTING.md
deployment/scripts/: deploy.sh  health-check.sh  logs.sh  scale.sh
docs/: architecture.md  terms.md
internal/: README.md
pkg/: README.md
proto/: README.md
scripts/: README.md
src/: __init__.py
src/client/: README.md  __init__.py  chat_client.py  demo.py  main.py  message_buffer.py  protocol.py  service.py
src/node/: __init__.py  main.py  peer_registry.py  room_state.py  service.py  state.py  websocket_server.py  xmlrpc_server.py
tests/: test_client_service.py  test_delete_room.py  test_disconnect.py  test_disconnect_detection.py  test_distributed_message_ordering.py  test_global_room_discovery.py  test_join_room.py  test_message_ordering.py  test_node_server.py  test_node_service.py  test_node_state.py  test_send_message.py  test_ui.py
tests/test_client_list_room.py/: test_list_rooms_protocol.py  (+1 more)
(+19 files in other folders)
