[tool.poetry]
name = "distributed-chat-node"
version = "0.1.0"
description = "A distributed peer-to-peer chat system"
authors = ["DS-G1-SMS Team"]
readme = "README.md"
packages = [{include = "node", from = "src"}, {include = "client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.25.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
pylint = "^3.0.0"
black = ">=23.0.0,<25.0.0"

[tool.poetry.scripts]
chat-node = "node.main:main"
chat-client = "client.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
